--- a/src/Assets/css/OldAttendee.css
+++ b/src/Assets/css/OldAttendee.css
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     margin-top: 100px;
 }
 
@@ -49,7 +49,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 
 .type-of-table-title {
@@ -62,6 +62,21 @@
     justify-content: center;
     align-items: center;
     margin-left: 10px;
+}
+
+.time-div {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5px;
+}
+
+.specific-time-div {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .old-attendee-table-div {
