--- a/src/Assets/css/AttendeeTabs.css
+++ b/src/Assets/css/AttendeeTabs.css
@@ -24,7 +24,7 @@ body {
     width: 50%;
     background-color: white;
     border-bottom: 1px solid rgba(0, 0, 0, 0.295);
-    color: black;
+    color: rgba(0, 0, 0, 0.7);
     font-size: 21px;
     font-weight: 600;
     cursor: pointer;
@@ -39,7 +39,7 @@ body {
     height: 50px;
     background-color: #E0FFFF;
     border-bottom: 4px solid #387C44;
-    color: black;
+    color: rgba(0, 0, 0, 0.7);
     font-size: 25px;
     font-weight: 600;
     cursor: pointer;
@@ -56,7 +56,7 @@ body {
     margin-left: 50%;
     background-color: white;
     border-bottom: 1px solid rgba(0, 0, 0, 0.295);
-    color: black;
+    color: rgba(0, 0, 0, 0.7);
     font-size: 21px;
     font-weight: 600;
     cursor: pointer;
@@ -72,7 +72,7 @@ body {
     margin-left: 50%;
     background-color: #E0FFFF;
     border-bottom: 4px solid #387C44;
-    color: black;
+    color: rgba(0, 0, 0, 0.7);
     font-size: 25px;
     font-weight: 600;
     cursor: pointer;
