--- a/src/Assets/css/OldAttendee.css
+++ b/src/Assets/css/OldAttendee.css
@@ -20,7 +20,7 @@
     height: 50px;
     align-items: center;
     justify-content: center;
-    color: black;
+    color: rgba(0, 0, 0, 0.7);
     background-color: white;
     border-bottom: 1px solid rgba(0, 0, 0, 0.295);
     font-size: 30px;
@@ -43,6 +43,8 @@
     border-radius: 20px;
     font-size: 20px;
     display: flex;
+    color: rgba(0, 0, 0, 0.7);
+    padding-left: 10px;
 }
 
 .type-of-table {
@@ -55,6 +57,7 @@
 .type-of-table-title {
     font-size: 20px;
     font-weight: 600;
+    color: rgba(0, 0, 0, 0.7)
 }
 
 .type-of-table-toggle-span {
@@ -77,6 +80,7 @@
     align-items: center;
     font-size: 20px;
     font-weight: 600;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .old-attendee-table-div {
@@ -102,6 +106,7 @@
     font-size: 12px;
     border-right: solid 0px #387C44;
     border-left: solid 0px #387C44;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .table-cells-div {
