--- a/src/Assets/css/Settings.css
+++ b/src/Assets/css/Settings.css
@@ -13,7 +13,7 @@
     height: 50px;
     align-items: center;
     justify-content: center;
-    color: black;
+    color: rgba(0, 0, 0, 0.7);
     background-color: white;
     border-bottom: 1px solid rgba(0, 0, 0, 0.295);
     font-size: 30px;
@@ -33,6 +33,7 @@
     font-size: 20px;
     font-weight: 600;
     margin-right: 10px;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .details-input-text {
@@ -42,6 +43,7 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 15px;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .settings-button-div {
