--- a/src/Assets/css/Modal.css
+++ b/src/Assets/css/Modal.css
@@ -35,6 +35,7 @@
     font-size: 30px;
     font-weight: 600;
     border-bottom: 1px solid rgba(0, 0, 0, 0.295);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .record-temp-error {
@@ -72,6 +73,7 @@
 .label-span {
     font-size: 20px;
     font-weight: 600;
+    color: rgba(0, 0, 0, 0.7)
 }
 
 .label-span-disabled {
@@ -79,6 +81,7 @@
     font-weight: 600;
     opacity: 0.3;
     cursor: not-allowed;
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .detail-span {
