feat: 🎸 styles for components added

--- a/src/assets/css/Icon.css
+++ b/src/assets/css/Icon.css
@@ -3,3 +3,13 @@
     margin: 10px;
     color: red;
 }
+
+.activate-toggle-on {
+    font-size: 30px;
+    color: #387C44;
+}
+
+.activate-toggle-off {
+    font-size: 30px;
+    color: #387C44;
+}
